[package]
name = "threejs-wasm-bindgen"
version = "0.1.0"
authors = ["Michael Allwright <allsey87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
serde = { version = "1.0.111", features = ["derive"] }
ron = "0.6.0"
swc_common = "0.5.12"
swc_ecma_parser = "0.23.0"
swc_ecma_ast = "0.20.0"
Inflector = "0.11.4"
